[package]
name = "cue-watch"
version = "0.3.1"
description = "A fast, lightweight file watcher that automatically runs your command on every save"
edition = "2024"
license = "MIT"
repository = "https://github.com/ozx1/cue"
readme = "README.md"
keywords = ["file-watcher", "watch", "cli", "developer-tools"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
chrono = "0.4.44"
clap = { version = "4.5.60", features = ["derive"] }
clearscreen = "4.0.3"
colored = "3.1.1"
confy = "2.0.0"
notify = "8.2.0"
serde = { version = "1.0.228", features = ["derive"] }
shell-words = "1.1.1"
terminal_size = "0.4.3"
which = "8.0.0"
toml = "0.8"
dialoguer = "0.12.0"
serial_test = "3.4.0"
walkdir = "2.5.0"
serde_json = "1.0.149"